# alive-cli

./: .aliverc  .env.example  .gitignore  README.md  alive  embeddings.db  state.alive
alive_cli/: main.py  pyproject.toml  weather.py  whisper.py
alive_cli/helpers/: lib.py
cli/: ag.sh  buffer.sh  connect.sh  deno.sh  deploy.sh  embed.sh  fold.sh  help.sh  init.sh  install.sh  listen.sh  ls.sh  mcp.sh  md.sh  note.sh  preview.sh  stage.sh  test.sh  toggle_keymap.sh
functions/: fold.hi  fold.hs  project.sh
lib/: helpers.sh
mcp-client/: client.py
symbols/: :deno  :help  :note  :scan
